--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "node src/app.js",
     "dev": "nodemon src/app.js"
+  },
+  "engines": {
+		"node": "12.18.1"
   },
   "repository": {
     "type": "git",
